# drf-social-auth

./: .env.sample  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.prod.txt  requirements.txt  server-entrypoint.sh  worker-entrypoint.sh
accounts/: serializers.py  urls.py  views.py
accounts/tests/: test_views.py
cinema/: api.py  models.py  schemas.py  tasks.py
cinema/migrations/: 0001_initial.py
cinema/tests/: test_tasks.py  test_views.py
core/: api.py  celery.py  settings.py  urls.py
